# meteroid

./: .gitignore  CONTRIBUTING.md  Cargo.toml
.github/workflows/: ci-rust.yaml  ci-ui.yaml  openapi-rust.yaml  preview-run.yml
crates/common-domain/src/: actor.rs  auth.rs  lib.rs
crates/common-domain/src/ids/: mod.rs
crates/common-eventbus/: Cargo.toml
crates/common-eventbus/src/: lib.rs
crates/secrecy/: Cargo.toml
modules/metering/src/: auth.rs
modules/meteroid/: Cargo.toml
modules/meteroid/crates/meteroid-grpc/: build.rs
modules/meteroid/crates/meteroid-invoicing/: Cargo.toml
modules/meteroid/crates/meteroid-mailer/: Cargo.toml
modules/meteroid/src/: config.rs  errors.rs  singletons.rs
modules/meteroid/src/adapters/: stripe.rs  types.rs
modules/meteroid/src/api/: mod.rs  server.rs  shared.rs
modules/meteroid/src/api_rest/: auth.rs  mod.rs  openapi.rs  server.rs
modules/meteroid/src/clients/: usage.rs
modules/meteroid/src/eventbus/: analytics_handler.rs
modules/meteroid/src/services/: credit_note_rendering.rs  invoice_rendering.rs
modules/meteroid/src/workers/: mod.rs
modules/meteroid/tests/integration/: e2e.rs  main.rs  test_billing.rs  test_credit_note.rs  test_entitlements.rs  test_invoice_computation.rs  test_quote.rs  test_slots.rs  test_user.rs  test_webhook.rs
modules/web/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
modules/web/web-app/: App.tsx  Dockerfile  buf.gen.yaml  eslint.config.mjs  main.tsx  package.json  tailwind.config.js
modules/web/web-app/components/: EditionGateCard.tsx
spec/api/v1/: openapi.json
(+465 files in other folders)
